--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,8 @@ services:
         tty: true
         volumes:
             - /var/run/tappd.sock:/var/run/tappd.sock
-            - tee:/app/packages/client-twitter/src/tweetcache
-            - tee:/app/db.sqlite
+            - /nvme/eliza:/app/packages/client-twitter/src/tweetcache
+            - /nvme/eliza:/app/db.sqlite
         environment:
             - OPENAI_API_KEY=
             - REDPILL_API_KEY=
@@ -39,4 +39,4 @@ services:
         restart: always
 
 volumes:
-    tee:
+    nvme:
